--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 html {
     scroll-behavior: smooth;
-
+    overflow-x: hidden;
 }
 
 a {
@@ -23,7 +23,7 @@ h1 {
 
 h2 {
     font-size: 32px;
-    margin-top: 5rem;
+  
     margin-bottom: 1rem;
 }
 
@@ -43,7 +43,7 @@ i {
 }
 
 section {
-
+   
     text-align: center;
 }
 
@@ -54,8 +54,56 @@ section p {
     margin-right: auto;
 }
 
+.background-gradient{ 
+    background-image: linear-gradient(to right, #c1c161 0%, #c1c161 0%, #eeeed1 100%);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+height: 100vh;
 
+
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.fa-chevron-down{
+   text-align: center;
+   font-weight: bold;
+   display: block;
+   text-decoration: none;
+   color: rgba(56, 56, 56, 0.5);
+   animation: scale 4s ease-in-out infinite;
+}
+
+.fa-chevron-down:hover{
+    color: rgb(167, 168, 91);
+}
+
+@keyframes scale {
+    0% {
+        transform: scale(0.8);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(0.8);
+    }
+
+}
 /*End Globals*/
+
+
+
+
 
 /*Header*/
 
@@ -77,11 +125,10 @@ section p {
 
 }
 
-.header__marca {
+.header__texto {
     color: rgb(167, 168, 91);
     font-family: 'Great Vibes', cursive;
     font-size: 30px;
-    flex: 1 1 auto;
 }
 
 
@@ -108,6 +155,10 @@ section p {
 
 
 }
+.header__marca{
+    display: flex;
+    align-items: center;
+}
 
 
 @media screen and (min-width: 768px) {
@@ -118,11 +169,7 @@ section p {
         align-items: center;
     }
 
-    .header__marca {
-
-        flex: 1 1 auto;
-    }
-
+   
     
 .nav__a {
 
@@ -141,17 +188,21 @@ section p {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)), url(img/fondo_hero.jpg);
     background-position: top;
-    text-align: center;
-    padding: 15rem 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+   
     overflow: hidden;
-    height: 100%;
+    height: calc(100vh + 2rem);
     color: #fff;
 }
 
 .hero__title {
+    
+    text-align: center;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.3rem;
+
 
 }
 
@@ -161,21 +212,39 @@ section p {
         margin-top: -6rem;
         
     }
+
+    .hero__title {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      
+    
+    
+    }
 }
 
 /*End Hero*/
 
 /*Nosotros*/
 
+
+
+.nosotros__text{
+    margin: auto 0;
+}
+
 .nosotros__img {
-    width: 100%;
+    height: 100vh;
+    
 }
 
 @media screen and (min-width: 768px) {
     .nosotros {
         display: grid;
         grid-template-columns: repeat(2, auto);
-        margin-top: 2rem;
+      
     }
 
 }
@@ -185,6 +254,9 @@ section p {
 
 /*Boda*/
 
+.boda{
+      margin: 3rem auto; 
+}
 
 
 .boda__p {
@@ -203,8 +275,11 @@ section p {
 }
 /*End Boda*/
 
-/* Itinerario */
+/* /* /* Itinerario 
 
+#itinerario {
+    background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+}
 
 
 .itinerario__img {
@@ -231,44 +306,68 @@ section p {
 
 
     }
-}
+} */ 
 /*End Itinerario*/
 
 /* Confirmacion */
 
 /* Form */
+
+.confirmacion__text{
+    margin: auto 0;
+}
+
+.confirmacion__form {
+    margin: auto 0;
+}
+
 fieldset {
     border: none;
 }
 
 legend {
-    padding: 2rem;
-    font-size: 32px;
+    padding: 1rem;
+    font-size: 24px;
 
 }
 
 input,
 textarea,
 select {
-    padding: 0.8rem;
-    width: 60%;
+    padding: 0.4rem;
+    width: 70%;
     background-color: #e1e1e1;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
 
 }
 
 .input__radio {
     display: inline;
     width: auto;
-    margin: 1rem;
-    margin-bottom: 2rem;
+    margin: 0 1rem;
+    margin-bottom: 1rem;
 }
 
 textarea {
-    height: 20rem;
+    height: 4rem;
 }
+
+
+
+@media screen and (min-width: 768px) {
+
+    .confirmacion {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        
+    }
+
+    
+}
+
+
 
 /* End Form */
 
