landing page con bootstrap

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 
 h2 {
     font-size: 32px;
-  
+
     margin-bottom: 1rem;
 }
 
@@ -43,7 +43,7 @@ i {
 }
 
 section {
-   
+
     text-align: center;
 }
 
@@ -54,36 +54,47 @@ section p {
     margin-right: auto;
 }
 
-.background-gradient{ 
+.background-gradient {
     background-image: linear-gradient(to right, #c1c161 0%, #c1c161 0%, #eeeed1 100%);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-height: 100vh;
+    
 
 
+}
+
+@media screen and (min-width: 768px) {
+    .background-gradient {
+    
+        height: 100vh;
+    
+    
+    }
 }
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
-.fa-chevron-down{
-   text-align: center;
-   font-weight: bold;
-   display: block;
-   text-decoration: none;
-   color: rgba(56, 56, 56, 0.5);
-   animation: scale 4s ease-in-out infinite;
+.fa-chevron-down {
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    text-decoration: none;
+    color: rgba(56, 56, 56, 0.5);
+    animation: scale 4s ease-in-out infinite;
 }
 
-.fa-chevron-down:hover{
+.fa-chevron-down:hover {
     color: rgb(167, 168, 91);
 }
 
@@ -91,14 +102,17 @@ height: 100vh;
     0% {
         transform: scale(0.8);
     }
+
     50% {
         transform: scale(1.3);
     }
+
     100% {
         transform: scale(0.8);
     }
 
 }
+
 /*End Globals*/
 
 
@@ -155,7 +169,8 @@ height: 100vh;
 
 
 }
-.header__marca{
+
+.header__marca {
     display: flex;
     align-items: center;
 }
@@ -169,13 +184,13 @@ height: 100vh;
         align-items: center;
     }
 
-   
-    
-.nav__a {
 
-    display: inline;
 
-}
+    .nav__a {
+
+        display: inline;
+
+    }
 }
 
 
@@ -184,20 +199,20 @@ height: 100vh;
 /*Hero*/
 .hero {
     margin: 0;
-    
+
     background-image: linear-gradient(rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)), url(img/fondo_hero.jpg);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
-   
+
     overflow: hidden;
     height: calc(100vh + 2rem);
     color: #fff;
 }
 
 .hero__title {
-    
+
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
@@ -206,11 +221,11 @@ height: 100vh;
 
 }
 
-@media screen and (min-width: 768px) { 
+@media screen and (min-width: 768px) {
 
-    .hero{
+    .hero {
         margin-top: -6rem;
-        
+
     }
 
     .hero__title {
@@ -219,9 +234,9 @@ height: 100vh;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-      
-    
-    
+
+
+
     }
 }
 
@@ -231,20 +246,20 @@ height: 100vh;
 
 
 
-.nosotros__text{
+/* .nosotros__text {
     margin: auto 0;
-}
+} */
 
 .nosotros__img {
-    height: 100vh;
-    
+    width: 100%;
+  
 }
 
 @media screen and (min-width: 768px) {
-    .nosotros {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-      
+    
+    .nosotros__img {
+        height: 100vh;
+    
     }
 
 }
@@ -254,8 +269,8 @@ height: 100vh;
 
 /*Boda*/
 
-.boda{
-      margin: 3rem auto; 
+.boda {
+    margin: 3rem auto;
 }
 
 
@@ -263,17 +278,10 @@ height: 100vh;
     text-align: center;
 }
 
-@media screen and (min-width: 768px) {
 
-    .boda__gridcontainer {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-
-    }
-
-
-}
 /*End Boda*/
+
+
 
 /* /* /* Itinerario 
 
@@ -306,14 +314,14 @@ height: 100vh;
 
 
     }
-} */ 
+} */
 /*End Itinerario*/
 
 /* Confirmacion */
 
 /* Form */
 
-.confirmacion__text{
+.confirmacion__text {
     margin: auto 0;
 }
 
@@ -336,7 +344,7 @@ textarea,
 select {
     padding: 0.4rem;
     width: 70%;
-    background-color: #e1e1e1;
+    
     margin-bottom: 1rem;
     border: none;
     border-radius: 0.3rem;
@@ -356,16 +364,7 @@ textarea {
 
 
 
-@media screen and (min-width: 768px) {
 
-    .confirmacion {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        
-    }
-
-    
-}
 
 
 
