--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ section p {
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
-
+    background-attachment: fixed;
     overflow: hidden;
     height: calc(100vh + 2rem);
     color: #fff;
